# Ai-Document-Manager

./: README.md
legal-dms/: .env.example  .gitignore  README.md  pyproject.toml
legal-dms/.streamlit/: config.toml
legal-dms/src/legal_dms/: __init__.py  pipeline.py
legal-dms/src/legal_dms/chat/: __init__.py  agent.py  prompts.py
legal-dms/src/legal_dms/classifier/: __init__.py  model.py  prompts.py
legal-dms/src/legal_dms/common/: __init__.py  llm.py  logging.py  placeholder.py  ui_theme.py
legal-dms/src/legal_dms/config/: __init__.py  settings.py
legal-dms/src/legal_dms/indexer/: __init__.py  store.py
legal-dms/src/legal_dms/ocr/: __init__.py  engine.py
legal-dms/src/legal_dms/organizer/: __init__.py  manager.py
legal-dms/src/legal_dms/ui/: __init__.py  app.py  chat_view.py  components.py  library_view.py  review_view.py  styles.py
legal-dms/src/legal_dms/watcher/: __init__.py  file_observer.py  monitor.py
legal-dms/tests/: test_chat.py  test_chromadb_filter.py  test_classifier.py  test_e2e.py  test_indexer.py  test_llm.py  test_ocr.py  test_organizer.py  test_pipeline.py
