[project]
name = "legal-dms"
version = "0.1.0"
description = "Local-first legal document management system scaffold with OCR, LLM classification, vector indexing, and a minimalist Streamlit interface."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Legal DMS", email = "legal-dms@example.com" }
]

dependencies = [
    "pydantic-settings>=2.0,<3.0",
    "streamlit>=1.25,<2.0",
    "python-dotenv>=1.0,<2.0",
    "openai>=1.30,<2.0",
    "anthropic>=0.40,<1.0",
    "requests>=2.31,<3.0",
    "llama-index>=0.10,<0.13",
    "chromadb>=0.5,<1.0",
    "sentence-transformers>=2.2,<4.0",
    "watchdog>=3.0,<7.0",
    "PyMuPDF>=1.23,<2.0",
    "easyocr>=1.7,<2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "reportlab>=4.0,<5.0"
]   